# FDVar

./: .clang-format  .clang-tidy  CMakeLists.txt  FDVarConfig.h.in  README.md
include/FDVar/: AbstractArrayValue.h  AbstractObjectValue.h  AbstractValue.h  AbstractValue_stl.h  ArrayValue.h  BoolValue.h  DynamicVariable.h  DynamicVariable_ctors.h  DynamicVariable_fwd.h  DynamicVariable_stl.h  FDVar.h  FDVarConfig.h  FDVarConfig.h.in  FloatValue.h  FunctionValue.h  IntValue.h  ObjectValue.h  StringValue.h  ValueType.h
src/: ArrayValue.cpp  DynamicVariable.cpp
test/: CMakeLists.txt  main.cpp
test/FDVar/: ArrayValue_test.h  BoolValue_test.h  DynamicVariable_test.h  FloatValue_test.h  FunctionValue_test.h  IntValue_test.h  ObjectValue_test.h  StringValue_test.h
